# docs/swagger.yaml
@@ -63,6 +63,17 @@ definitions:
       titile:
         type: string
     type: object
+  request.UpdateAuditStatusReq:
+    properties:
+      company_id:
+        type: integer
+      status:
+        type: integer
+      update_type:
+        type: integer
+      userID:
+        type: integer
+    type: object
   request.UserAduitMaterialsReleaseReq:
     properties:
       address:
@@ -101,6 +112,32 @@ info:
   title: Swagger Example API
   version: 0.0.1
 paths:
+  /certificate/UpdateUserAuditStatus:
+    post:
+      consumes:
+      - application/json
+      parameters:
+      - description: 审核状态更新
+        in: body
+        name: data
+        required: true
+        schema:
+          $ref: '#/definitions/request.UpdateAuditStatusReq'
+      produces:
+      - application/json
+      responses:
+        "200":
+          description: 审核状态更新成功
+          schema:
+            allOf:
+            - $ref: '#/definitions/response.Response'
+            - properties:
+                msg:
+                  type: string
+              type: object
+      summary: 更新审核状态
+      tags:
+      - UpdateUserAuditStatus
   /certificate/company_audit_material_release:
     post:
       consumes:
