# router/certificate/certificate.go
@@ -14,5 +14,6 @@ func (r *CertificateRouter) InitRouter(pr *gin.RouterGroup) {
 		g.POST("user_audit_material_release", api.UserAduitMaterialsRelease)
 		g.POST("company_audit_material_release", api.CompanyAduitMaterialsRelease)
 		g.POST("good_release", api.ReleaseGoods)
+		g.POST("update_audit_status", api.UpdateUserAuditStatus)
 	}
 }
